# yatzy_solver

./: .gitignore  Cargo.toml  README.md
distributed/: machines.txt  run.py
misc/: creating_lookup_tables.jl  finding_distribution.jl  yatzy_thoughts.md
src/: above_line.rs  dice_distributions.rs  dice_throw.rs  file_segmentation.rs  guide.rs  level_ordering.rs  lib.rs  main.rs  simulation.rs  solver.rs  util.rs  yatzy.rs
src/macrosolver/: distr.rs  incore.rs  measures.rs  mod.rs  normal.rs  outcore.rs  outcorex.rs  saving.rs
src/solvers/: full.rs  mod.rs
