[package]
name = "yatzy_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

once_cell = "1"
rand = "0.8"
itertools = "0.12"
ndarray = {version = "0.15", features = ["rayon"]}
arrayvec = "0.7"
crossbeam = "0.8"
thread_local = "1"

[lib]
crate-type = ["cdylib"]
